# polkadot-rest-api

./: .env.sample  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  MIGRATION.md  README.md  benchmark_config.json  docker-compose.local.yml  docker-compose.yml  manifest-production.yaml  manifest-staging.yaml  manifest.yaml  sidecar-benchmarks.txt  sidecar_mapping.json  subxt_accountid_example.md
crates/config/: Cargo.toml
crates/config/src/: args.rs  chain.rs  chain_config.json  chain_fee_config.json  error.rs  express.rs  fee.rs  lib.rs  log.rs  metrics.rs  spec_versions.rs  substrate.rs
crates/integration_tests/: Cargo.toml  README.md
crates/integration_tests/scripts/: migrate_fixtures.sh  update_fixture_paths.py
crates/integration_tests/src/: client.rs  config.rs  fixtures.rs  lib.rs  test_helpers.rs  utils.rs
crates/integration_tests/tests/: accounts_asset_approvals.rs  accounts_asset_balances.rs  accounts_balance_info.rs  accounts_compare.rs  accounts_convert.rs  accounts_pool_asset_approvals.rs  accounts_pool_asset_balances.rs  accounts_proxy_info.rs  accounts_staking_info.rs  accounts_staking_payouts.rs  accounts_validate.rs  accounts_vesting_info.rs  basic.rs  blocks_range.rs  capabilities.rs  chain_config.rs  coretime.rs  demo_diff.rs  enum_serialization.rs  historical.rs  latest.rs  rc_accounts_balance_info.rs  rc_accounts_staking_info.rs  rc_accounts_staking_payouts.rs  relay_chain_connection.rs  use_rc_block.rs
crates/integration_tests/tests/accounts/: asset_approvals.rs  asset_balances.rs  balance_info.rs  compare.rs  convert.rs  foreign_asset_balances.rs  mod.rs  pool_asset_approvals.rs  pool_asset_balances.rs  proxy_info.rs  staking_info.rs  staking_payouts.rs  validate.rs  vesting_info.rs
crates/integration_tests/tests/config/: test_config.json
crates/integration_tests/tests/coretime/: info.rs  leases.rs  mod.rs  overview.rs  regions.rs  renewals.rs  reservations.rs
crates/integration_tests/tests/fixtures/: accounts_asset_balances_alice_10260000.json  use_rc_block_10554957.json  use_rc_block_extrinsic_10554957_0.json  use_rc_block_extrinsics_raw_10554957.json  use_rc_block_head_header_structure.json  use_rc_block_header_10293194.json
crates/integration_tests/tests/fixtures/asset-hub-kusama/: accounts_asset_approvals_5000000.json  accounts_asset_balances_5000000.json  accounts_balance_info_5000000.json  accounts_foreign_asset_balances_5000000.json  accounts_pool_asset_approvals_7000000.json  accounts_pool_asset_balances_5000000.json  accounts_pool_asset_balances_7000000.json  accounts_proxy_info_5000000.json  accounts_vesting_info_10000000.json  blocks_11150000_pre_migration.json  blocks_11152000_post_migration.json  blocks_12949861_use_evm_format.json  blocks_range_12949861-12949863_use_evm_format.json  extrinsic_12949861_1_use_evm_format.json  pallets_asset_conversion_next_available_id_8000000.json  pallets_assets_storage_12676268.json  pallets_assets_storage_5000000.json  pallets_balances_dispatchables_8000000.json  pallets_balances_errors.json  pallets_balances_errors_11152000.json  pallets_balances_errors_InsufficientBalance.json  pallets_balances_errors_InsufficientBalance_11152000.json  pallets_balances_errors_InsufficientBalance_metadata.json  pallets_foreign_assets_11152000.json  pallets_pool_assets_0_asset_info_8000000.json  pallets_system_consts_1000000.json  pallets_system_consts_11152000.json  pallets_system_consts_item_BlockHashCount_7860000.json  pallets_system_dispatchables_1000000.json  pallets_system_dispatchables_11152000.json  pallets_system_errors.json  pallets_system_errors_1000000.json  pallets_system_errors_11152000.json  pallets_system_events_1000000.json  pallets_system_events_11152000.json  pallets_system_storage_1000000.json  pallets_system_storage_12000000.json  pallets_system_storage_12676268.json  pallets_system_storage_5000000.json  pallets_system_storage_number_11152000.json  (+6 more)
crates/integration_tests/tests/fixtures/asset-hub-polkadot/: accounts_asset_balances_10260000.json  accounts_balance_info_10260000.json  accounts_balance_info_alice_10260000_denominated.json  accounts_balance_info_alice_10260000_token_dot.json  accounts_foreign_asset_balances_10260000.json  accounts_foreign_asset_balances_alice_10260000.json  accounts_pool_asset_approvals_10260000.json  accounts_pool_asset_balances_10260000.json  accounts_proxy_info_10260000.json  accounts_proxy_info_alice_10260000.json  accounts_validate_alice.json  accounts_vesting_info_10260000.json  accounts_vesting_info_alice_10260000.json  blocks_10250000_pre_migration.json  blocks_10260000_post_migration.json  blocks_10293194_rc_extrinsics_raw.json  blocks_11308795.json  blocks_12273189.json  blocks_1276963_extrinsics_raw.json  blocks_header_1276963.json  blocks_range_use_rc_block_10293194-10293197.json  extrinsic_11308795_2_with_docs.json  extrinsic_1276963_0.json  pallets_asset_conversion_liquidity_pools_10260000.json  pallets_asset_conversion_next_available_id_10260000.json  pallets_assets_storage_11184807.json  (+64 more)
crates/server/: Cargo.toml  build.rs
crates/server/src/: app.rs  consts.rs  extractors.rs  lib.rs  logging.rs  main.rs  openapi.rs  state.rs  swagger_ui.html
crates/server/src/handlers/: ACCOUNTS_IMPROVEMENTS.md  capabilities.rs  common.rs  mod.rs
crates/server/src/logging/: format.rs  http_logger.rs  logger.rs  mod.rs
crates/server/src/metrics/: middleware.rs  mod.rs  registry.rs
crates/server/src/middleware/: mod.rs  rc_format.rs
crates/server/src/routes/: accounts.rs  ahm.rs  blocks.rs  capabilities.rs  coretime.rs  health.rs  metrics.rs  mod.rs  node.rs  pallets.rs  paras.rs  rc.rs  registry.rs  root.rs  runtime.rs  transaction.rs  version.rs
crates/server/src/test_fixtures/: asset_hub_polkadot_metadata.scale  mod.rs
crates/server/src/types/: hash.rs  mod.rs
crates/server/src/utils/: block.rs  capabilities.rs  concurrency.rs  extrinsic.rs  fee.rs  fee_service.rs  format.rs  hash.rs  mod.rs  rc_block.rs
crates/server/tests/: deny_unknown_fields_test.rs  metrics_query_params_test.rs  metrics_test.rs  pallets_storage_test.rs
(+493 files in other folders)
