[workspace]
resolver = "2"
members = [
    "crates/server",
    "crates/config",
    "crates/integration_tests"
]

[workspace.package]
version = "0.1.0-beta.1"
edition = "2024"
authors = ["Parity Technologies <admin@parity.io>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/paritytech/polkadot-rest-api"
