[package]
name = "polkadot-rest-api-config"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
description = "Configuration crate for polkadot-rest-api"

[dependencies]
serde = { version= "1.0", features = ["derive"] }
serde_json = "1.0"
envy = "0.4"
thiserror = "2.0"
url = "2.5"
clap = { version = "4.5.54", features = ["derive"] }
dotenv = "0.15.0"

[dev-dependencies]
tempfile = "3.24.0"
serial_test = "3.2"
