[package]
name = "integration_tests"
version = "0.1.0"
edition = "2024"

[[test]]
name = "historical"
path = "tests/historical.rs"

[[test]]
name = "latest"
path = "tests/latest.rs"

[[test]]
name = "basic"
path = "tests/basic.rs"

[[bin]]
name = "update_fixtures"
path = "src/bin/update_fixtures.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
config = { path = "../config" }
serde_urlencoded = "0.7"
futures = "0.3"
jsonrpsee = { version = "0.24.10", features = ["ws-client"] }

[dev-dependencies]
tempfile = "3.10"

