[package]
name = "integration_tests"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true
publish = false

[[test]]
name = "historical"
path = "tests/historical.rs"

[[test]]
name = "latest"
path = "tests/latest.rs"

[[test]]
name = "basic"
path = "tests/basic.rs"

[[test]]
name = "use_rc_block"
path = "tests/use_rc_block.rs"

[[test]]
name = "accounts"
path = "tests/accounts/mod.rs"

[[bin]]
name = "update_fixtures"
path = "src/bin/update_fixtures.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
polkadot-rest-api-config = { path = "../config", version = "0.1.0-beta.1" }
serde_urlencoded = "0.7"
futures = "0.3"
jsonrpsee = { version = "0.24.10", features = ["ws-client"] }
colored = "2.1"

[dev-dependencies]
tempfile = "3.10"

