[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "polkadot-rest-api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "json"]}
tracing-appender = "0.2"
rolling-file = "0.2"
thiserror = "2.0"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace", "cors", "limit"] }
socket2 = "0.6"
config = { path = "../config" }
subxt-historic = { version = "0.0.4" }
subxt-rpcs = { version = "0.44.0" }
primitive-types = "0.13"
rustc-hex = "2.1"
hex = "0.4"
parity-scale-codec = { version = "3.0", features = ["derive"] }
sp-core = "34"
sp-runtime = "39"
sp-consensus-babe = "0.40"
scale-value = "0.18"
scale-decode = { version = "0.16", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
subxt-rpcs = { version = "0.44.0", features = ["mock-rpc-client"] }