[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "polkadot-rest-api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "json"]}
tracing-appender = "0.2"
rolling-file = "0.2"
thiserror = "2.0"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace", "cors", "limit"] }
socket2 = "0.6"
config = { path = "../config" }
# Using local subxt branch with visitor functionality
subxt-historic = { path = "/Users/tarikgul/Desktop/parity/tools-team/secondary/subxt/historic" }
subxt-rpcs = { path = "/Users/tarikgul/Desktop/parity/tools-team/secondary/subxt/rpcs" }
primitive-types = "0.13"
rustc-hex = "2.1"
hex = "0.4"
parity-scale-codec = { version = "3.0", features = ["derive"] }
sp-core = "34"
sp-runtime = "39"
sp-consensus-babe = "0.40"
scale-value = "0.18"
scale-decode = { version = "0.16", features = ["derive"] }
scale-type-resolver = "0.2.0"
scale-info-legacy = "0.4.0"
prometheus = "0.13"
lazy_static = "1.4"
regex = "1.10"
tracing-loki = "0.2"
url = "2.5"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
subxt-rpcs = { path = "/Users/tarikgul/Desktop/parity/tools-team/secondary/subxt/rpcs", features = ["mock-rpc-client"] }